tests/characterization/snapshots/need_command__jq_missing.snap
---
source: tests/characterization/errors.rs
expression: output
---
exit: 1
--- stdout ---
--- stderr ---
Error: 'jq' is required but was not found on PATH.
--- end ---
